Fix url bar is not auto hidden on mobile chrome
Seems the root cause is the custom scrollbar. Remove it to workaround
the issue.

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 html {
-  width: 100vw;
-  height: 100vh;
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -15,36 +13,15 @@ body {
   background-color: #1c1c1c;
   width: 100%;
   height: 100%;
-  min-width: 100%;
-  min-height: 100%;
   display: flex;
   flex-direction: column;
   flex: 1;
 }
 
 #root {
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   flex: 1;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #808080;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #6c6c6c;
-}
-
-::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
-  background-color: transparent;
-}
-
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #808080 transparent;
 }
